<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonM"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="287dp"
        android:text="@string/m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonI" />

    <Button
        android:id="@+id/buttonL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/l"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonK"
        app:layout_constraintTop_toBottomOf="@+id/buttonH" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="287dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonO"
        app:layout_constraintTop_toBottomOf="@+id/buttonL" />

    <Button
        android:id="@+id/buttonJ"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/j"
        app:layout_constraintBottom_toTopOf="@+id/buttonN"
        app:layout_constraintEnd_toStartOf="@+id/buttonK"
        app:layout_constraintStart_toEndOf="@+id/buttonI"
        app:layout_constraintTop_toBottomOf="@+id/buttonF" />

    <Button
        android:id="@+id/buttonK"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/k"
        app:layout_constraintBottom_toTopOf="@+id/buttonO"
        app:layout_constraintEnd_toStartOf="@+id/buttonL"
        app:layout_constraintStart_toEndOf="@+id/buttonJ"
        app:layout_constraintTop_toBottomOf="@+id/buttonG" />

    <Button
        android:id="@+id/buttonI"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/i"
        app:layout_constraintBottom_toTopOf="@+id/buttonM"
        app:layout_constraintEnd_toStartOf="@+id/buttonJ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonE" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="3dp"
        android:text="@string/e"
        app:layout_constraintBottom_toTopOf="@+id/buttonI"
        app:layout_constraintEnd_toStartOf="@+id/buttonF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA" />

    <Button
        android:id="@+id/buttonF"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:text="@string/f"
        app:layout_constraintBottom_toTopOf="@+id/buttonJ"
        app:layout_constraintEnd_toStartOf="@+id/buttonG"
        app:layout_constraintStart_toEndOf="@+id/buttonE"
        app:layout_constraintTop_toBottomOf="@+id/buttonB" />

    <Button
        android:id="@+id/buttonG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:text="@string/g"
        app:layout_constraintBottom_toTopOf="@+id/buttonK"
        app:layout_constraintEnd_toStartOf="@+id/buttonH"
        app:layout_constraintStart_toEndOf="@+id/buttonF"
        app:layout_constraintTop_toBottomOf="@+id/buttonC" />

    <Button
        android:id="@+id/buttonH"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="3dp"
        android:text="@string/h"
        app:layout_constraintBottom_toTopOf="@+id/buttonL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonG"
        app:layout_constraintTop_toBottomOf="@+id/buttonD" />

    <Button
        android:id="@+id/buttonO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="287dp"
        android:text="@string/o"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonZero"
        app:layout_constraintStart_toEndOf="@+id/buttonN"
        app:layout_constraintTop_toBottomOf="@+id/buttonK" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/d"
        app:layout_constraintBottom_toTopOf="@+id/buttonH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonN"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="287dp"
        android:text="@string/n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonO"
        app:layout_constraintStart_toEndOf="@+id/buttonM"
        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="157dp"
        android:text="@string/b"
        app:layout_constraintBottom_toTopOf="@+id/buttonF"
        app:layout_constraintEnd_toStartOf="@+id/buttonC"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="157dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/buttonG"
        app:layout_constraintEnd_toStartOf="@+id/buttonD"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="157dp"
        android:text="@string/a"
        app:layout_constraintBottom_toTopOf="@+id/buttonE"
        app:layout_constraintEnd_toStartOf="@+id/buttonB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/game_puzzle_huruf"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>